--- a/WB_Joint_Ownership/app/src/main/AndroidManifest.xml
+++ b/WB_Joint_Ownership/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
 	<uses-permission android:name="android.permission.CAMERA"/>
 	<uses-permission android:name="android.permission.RECORD_AUDIO"/>
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-	 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
@@ -24,21 +25,26 @@
 		android:theme="@style/AppTheme">
 		<activity
 			android:name=".MainActivity"
+			android:label="@string/title_activity_video_chat"
 			android:screenOrientation="landscape"
-			android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
-			android:label="@string/title_activity_video_chat">
-			<!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen"-->
-
+			android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+			<!-- android:theme="@android:style/Theme.NoTitleBar.Fullscreen" -->
 			<!-- android:configChanges="orientation|keyboardHidden|screenSize" -->
-			<!---->
+			<!--  -->
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
-
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 		<activity android:name=".MyPreferencesActivty"/>
-
+		<activity android:name=".CS_Web_Activity"
+				  android:screenOrientation="landscape"
+				  android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+		</activity>
+		<activity android:name=".CS_WhitebordActivity"
+				  android:screenOrientation="landscape"
+				  android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+		</activity>
 	</application>
 
 </manifest>
