--- a/WB_Joint_Ownership/app/src/main/AndroidManifest.xml
+++ b/WB_Joint_Ownership/app/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
 			android:name=".MainActivity"
 			android:label="@string/title_activity_video_chat"
 			android:screenOrientation="landscape"
-			android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
-			<!-- android:theme="@android:style/Theme.NoTitleBar.Fullscreen" -->
+			android:theme="@style/AppTheme.NoActionBar">
+			<!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen">-->
 			<!-- android:configChanges="orientation|keyboardHidden|screenSize" -->
 			<!--  -->
 			<intent-filter>
