--- a/WB_Joint_Ownership/app/src/main/AndroidManifest.xml
+++ b/WB_Joint_Ownership/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+	<meta-data android:name="android.webkit.WebView.EnableSafeBrowsing" android:value="true" />
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
